# ascent-plusplus

./: .gitignore  Cargo.toml  README.MD
.github/workflows/: rust.yml
ascent/: Cargo.toml
ascent/src/: c_rel_full_index.rs  c_rel_index.rs  c_rel_no_index.rs  internal.rs  lib.rs  rel.rs  rel_index_read.rs  tag.rs  to_rel_index.rs
ascent_base/src/: lattice.rs
ascent_base/src/lattice/: set.rs
ascent_macro/: Cargo.toml
ascent_macro/src/: ascent_codegen.rs  ascent_hir.rs  ascent_mir.rs  ascent_monotonic.rs  ascent_sugar.rs  ascent_syntax.rs  lib.rs  scratchpad.rs  scratchpad_template.rs  tests.rs  utils.rs
ascent_macro/src/codegen/: ds.rs  mir2rust.rs  mod.rs  rule.rs  scc.rs  summary.rs  update_indices.rs  util.rs
ascent_tests/: Cargo.toml
ascent_tests/benches/: benches.rs
ascent_tests/others/: README.md
ascent_tests/src/: agg_tests.rs  dep_head.rs  dynamic_programming.rs  example_tests.rs  extdb.rs  graph.rs  inca_codegen.rs  incremental.rs  io.rs  itype.rs  lib.rs  longest_palindromic.rs  provenance.rs  sat.rs  tests.rs  utils.rs
ascent_tests/test_data/: longest_valid_parentheses.txt  longest_valid_parentheses_rand.txt
byods/ascent-byods-rels/: Cargo.toml
byods/ascent-byods-rels/src/: ceqrel_ind.rs  eqrel_ind.rs  eqrel_ternary.rs  lib.rs  test.rs  trrel_binary_ind.rs  trrel_ternary_ind.rs
byods/ascent-byods-rels/src/adaptor/: bin_rel.rs  bin_rel_to_ternary.rs
byods/ascent-byods-rels/src/linear/: linear.rs  linear_ind.rs  mod.rs
byods/ascent-byods-rels/src/phantom/: ind.rs  mod.rs  phantom_vec.rs  rel.rs
