[workspace]
members = ["ascent", "ascent_base", "ascent_macro", "ascent_tests"] 
exclude = ["wasm-tests"]
resolver = "2"

[workspace.package]
version = "0.7.0"

[workspace.dependencies]
ascent = { path = "./ascent", default-features = false, version = "0.7.0" }
ascent_macro = { path = "./ascent_macro", version = "0.7.0" }
ascent_base = { path = "./ascent_base", version = "0.7.0" }
