[package]
name = "ascent_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ascent = { path = "../ascent", default-features = false }
ascent-byods-rels = { path = "../byods/ascent-byods-rels", default-features = false }
stopwatch = "0.0.7"
bencher = "0.1.5"
derive_more = "0.99.16"
itertools = "0.12"
quote = "1.0"
arrayvec = "0.7"
const-fnv1a-hash = "1.0.1"
rand = "0.8.4"
rayon = { version = "1.5", optional = true }

# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.85"

[[bench]]
name = "benches"
harness = false

[features]
default = ["par"]
compact = []
par = ["ascent/par"]
